# AgentFigureGallery

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_ATTRIBUTION.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  community_pack.yml  config.yml  feature_request.yml  gallery_expansion.yml
.github/workflows/: ci.yml  publish-pypi.yml
ExtendAgent/: README.md
agentfiguregallery/: __init__.py  cli.py  server.py
community_pool/: README.md  candidate_schema.example.json  pack_schema.example.yaml  resource_manifest.example.json
community_pool/packs/: README.md
data/: reference_candidate_facets.json  reference_candidate_index.json  reference_global_preferences.json
docs/: AGENT_QUICKSTART.md  COMMUNITY_PACKS.md  DISCOVERY_PLAYBOOK.md  FULL_KB_DISTRIBUTION.md  HF_DATASET_CARD.md  HF_SPACE.md  HF_SYNC.md  HUMAN_PREFERENCE_LOOP.md  LAUNCH.md  P0_ONBOARDING_RETRO.md  PACKAGING_PLAN.md  PYPI_RELEASE.md  REFINEMENT_PLAN.md  RELEASE_ARCHITECTURE.md  RELEASE_CHECKLIST.md  REMOTE_FULL_VALIDATION.md  REMOTE_PREVIEW.md  RESOURCE_STRATEGY.md  TRUST_AND_INSTALL.md
docs/releases/: v0.1.0.md
examples/: agent_prompt.md  end_to_end_embedding.md
examples/before_after_benchmark/: README.md  render_before_after.py
examples/generated_embedding_plot/: README.md  data.csv  plot_embedding.py  reference_bundle_example.json
examples/minimal_reference_pack/: README.md
examples/plot_type_examples/: README.md  manifest.json  render_plot_type_examples.py
examples/plot_type_examples/source_data/: bar_chart_example.csv  benchmark_performance_example.csv  box_violin_distribution_example.csv  embedding_plot_example.csv  (+6 more)
frontend/reference_gallery/: app.js  index.html  styles.css
manifests/: resource_manifest.example.json  resource_manifest.github-api.json  resource_manifest.json
scripts/: build_github_release_manifest.py  build_minimal_pack_from_glikes.py  build_public_kb_pack.py  check_private_paths.py  download_assets.py  install.sh  render_readme_demo_gif.py  render_readme_scale_overview.py  render_social_preview.py  setup_full_kb.py  upload_full_public_to_hf.py
skills/agent-figure-gallery/: SKILL.md
spaces/agentfiguregallery-static/: README.md  index.html  styles.css
