[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfiguregallery"
version = "0.1.0"
description = "Human-in-the-loop visual reference memory for scientific plotting agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "AgentFigureGallery contributors"}
]
dependencies = []

[project.scripts]
agentfiguregallery = "agentfiguregallery.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentfiguregallery*"]

